MOC-41: Using data-provider

--- a/mockez-front/src/app/general/component/general/general.component.html
+++ b/mockez-front/src/app/general/component/general/general.component.html
@@ -1,2 +1,2 @@
-<app-table [table]='table'></app-table>
-<app-configuration [configuration]='configuration'></app-configuration>
+<app-table></app-table>
+<app-configuration></app-configuration>
