--- a/mockez-front/src/app/schema/component/schema/schema.component.html
+++ b/mockez-front/src/app/schema/component/schema/schema.component.html
@@ -1,5 +1,5 @@
 <h1 class='title flex uppercase font-bold mx-auto mt-20 '>{{'project.title' | translate | uppercase}} > Youtobe</h1>
-<div class='search mt-2 p-4 mx-auto bg-white rounded-md text-sm'>
+<div class='search mt-2 p-4 mx-auto shadow-light bg-white rounded-md text-sm'>
   <span class='ml-2.5 font-bold'>{{'project.search.title' | translate}}</span>
   <div class='flex ml-5 mt-2'>
     <div class='flex items-center bg-gray rounded-md ml-5 p-2.5 w-3/5 h-10'>
@@ -23,7 +23,7 @@
     </div>
   </div>
 </div>
-<div id='form' class='mt-2 p-4 mx-auto bg-white rounded-md text-sm'>
+<div id='form' class='mt-2 p-4 shadow-light mx-auto bg-white rounded-md text-sm'>
   <div class='flex ml-5 mb-2 justify-center'>
     <span class='font-bold mt-2 ml-2.5 w-1/5'>{{'schema.table.schema_summary' | translate}}</span>
     <div class='flex justify-center w-3/5'>
