--- a/mockez-front/src/styles.scss
+++ b/mockez-front/src/styles.scss
@@ -46,4 +46,8 @@ body {
   .bg-main {
     background-color: #3DA2FF;
   }
+
+  .dialog {
+    @apply fixed top-0 left-0 w-full h-full z-10;
+  }
 }
