--- a/mockez-front/src/app/schema/component/schema/schema.component.html
+++ b/mockez-front/src/app/schema/component/schema/schema.component.html
@@ -58,54 +58,19 @@
     <span class='font-bold mt-2 ml-2.5 w-1/6'></span>
   </div>
 
-  <div class='flex mt-2 ml-5 justify-between'>
+  <div *ngFor='let schema of schemas' class='flex mt-2 ml-5 justify-between'>
     <div class='flex items-center mt-2 w-1/6'>
       <input type='checkbox' value=''
              class='w-4 h-4 text-blue-600 bg-gray-100 focus:ring-blue-500 cursor-pointer'>
     </div>
-    <span class='mt-2 ml-2.5 w-1/3'>Mockez</span>
-    <span class='mt-2 ml-2.5 w-1/3'>Luong Quoc Trung</span>
+    <span class='mt-2 ml-2.5 w-1/3'>{{schema.name}}</span>
+    <span class='mt-2 ml-2.5 w-1/3'>{{schema.project.group.name}}</span>
     <span class='mt-2 ml-2.5 w-1/3'>2 days ago</span>
     <div class='flex justify-center bg-white rounded-md items-center cursor-pointer ml-2.5 w-1/6'>
       <img class='icon' src='/assets/icon/general/delete.png' alt='delete'/>
     </div>
   </div>
-  <div class='flex mt-2 ml-5 justify-between'>
-    <div class='flex items-center mt-2 w-1/6'>
-      <input type='checkbox' value=''
-             class='w-4 h-4 text-blue-600 bg-gray-100 focus:ring-blue-500 cursor-pointer'>
-    </div>
-    <span class='mt-2 ml-2.5 w-1/3'>Youtobe</span>
-    <span class='mt-2 ml-2.5 w-1/3'>Do Quoc Viet</span>
-    <span class='mt-2 ml-2.5 w-1/3'>2 days ago</span>
-    <div class='flex justify-center bg-white rounded-md items-center cursor-pointer ml-2.5 w-1/6'>
-      <img class='icon' src='/assets/icon/general/delete.png' alt='delete'/>
-    </div>
-  </div>
-  <div class='flex mt-2 ml-5 justify-between'>
-    <div class='flex items-center mt-2 w-1/6'>
-      <input type='checkbox' value=''
-             class='w-4 h-4 text-blue-600 bg-gray-100 focus:ring-blue-500 cursor-pointer'>
-    </div>
-    <span class='mt-2 ml-2.5 w-1/3'>Youtobe</span>
-    <span class='mt-2 ml-2.5 w-1/3'>Do Quoc Viet</span>
-    <span class='mt-2 ml-2.5 w-1/3'>2 days ago</span>
-    <div class='flex justify-center bg-white rounded-md items-center cursor-pointer ml-2.5 w-1/6'>
-      <img class='icon' src='/assets/icon/general/delete.png' alt='delete'/>
-    </div>
-  </div>
-  <div class='flex mt-2 ml-5 justify-between'>
-    <div class='flex items-center mt-2 w-1/6'>
-      <input type='checkbox' value=''
-             class='w-4 h-4 text-blue-600 bg-gray-100 focus:ring-blue-500 cursor-pointer'>
-    </div>
-    <span class='mt-2 ml-2.5 w-1/3'>Youtobe</span>
-    <span class='mt-2 ml-2.5 w-1/3'>Do Quoc Viet</span>
-    <span class='mt-2 ml-2.5 w-1/3'>2 days ago</span>
-    <div class='flex justify-center bg-white rounded-md items-center cursor-pointer ml-2.5 w-1/6'>
-      <img class='icon' src='/assets/icon/general/delete.png' alt='delete'/>
-    </div>
-  </div>
+
 </div>
 
 
