MOC-45: Login UI

--- a/mockez-front/src/app/shared/layout/component/navigation/navigation.component.html
+++ b/mockez-front/src/app/shared/layout/component/navigation/navigation.component.html
@@ -23,7 +23,7 @@
          (click)='isLight=!isLight'/>
     <img class='icon cursor-pointer mr-8' src='assets/icon/navigation/settings.png' alt='setting'/>
     <img class='icon cursor-pointer mr-8' src='assets/icon/navigation/notification.png' alt='notification'/>
-    <img class='icon cursor-pointer mr-8' src='assets/icon/navigation/facebook_messenger.png' alt='facebook messenger'/>
+    <img class='icon cursor-pointer mr-8' src='assets/icon/navigation/group.png' alt='group'/>
     <img class='icon cursor-pointer mr-8' src='assets/icon/navigation/user.png' alt='user'/>
   </div>
 </nav>
