--- a/mockez-front/src/styles.scss
+++ b/mockez-front/src/styles.scss
@@ -30,7 +30,7 @@ body {
   background-color: #F0F2F5;
   font-family: 'Roboto', sans-serif;
 
-  input {
+  input, label {
     font-family: 'Roboto', sans-serif;
     outline: none;
   }
