--- a/mockez-front/src/app/project/component/project/project.component.html
+++ b/mockez-front/src/app/project/component/project/project.component.html
@@ -4,7 +4,8 @@
   <div class='flex ml-5 mt-2'>
     <div class='flex items-center bg-gray rounded-md ml-5 p-2.5 w-3/5 h-10'>
       <img src='/assets/icon/navigation/search.png' alt='search'/>
-      <input class='outline-border-none bg-gray w-full ml-2.5' type='text' placeholder="{{'project.search.placeholder' | translate}}"/>
+      <input class='outline-border-none bg-gray w-full ml-2.5' type='text'
+             placeholder="{{'project.search.placeholder' | translate}}"/>
     </div>
     <div class='flex items-center rounded-md ml-5 p-2.5 h-10'>
       <img src='/assets/icon/project/filter.png' alt='filter'/>
@@ -64,7 +65,7 @@
              class='w-4 h-4 text-blue-600 bg-gray-100 focus:ring-blue-500 cursor-pointer'>
     </div>
     <span class='mt-2 ml-2.5 w-1/3'>{{project.name}}</span>
-    <span class='mt-2 ml-2.5 w-1/3'>{{project.name}}</span>
+    <span class='mt-2 ml-2.5 w-1/3'>{{project.group.users}}</span>
     <span class='mt-2 ml-2.5 w-1/3'>2 days ago</span>
     <div class='flex justify-center bg-white rounded-md items-center cursor-pointer ml-2.5 w-1/6'>
       <img class='icon' src='/assets/icon/general/delete.png' alt='delete'/>
