--- a/mockez-front/src/app/app.component.html
+++ b/mockez-front/src/app/app.component.html
@@ -1,3 +1,6 @@
-<!--<app-navigation></app-navigation>-->
-<router-outlet></router-outlet>
-<!--<app-footer></app-footer>-->
+<div id='background'></div>
+<div id='app'>
+  <app-navigation></app-navigation>
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
+</div>
