--- a/mockez-front/src/app/shared/layout/component/footer/footer.component.html
+++ b/mockez-front/src/app/shared/layout/component/footer/footer.component.html
@@ -17,13 +17,14 @@
     <div class='flex justify-center h-full'>
       <button type='button'
               class='uppercase text-center text-black font-medium p-4 w-60'
-              (click)='saveThisSchemaOnClick()'>
+              (click)='featureNotAvailable()'>
         {{'general.footer.save_this_schema' | translate | uppercase}}
       </button>
     </div>
     <div class='flex justify-center h-full'>
       <button type='button'
-              class='flex justify-center items-center uppercase text-center text-black font-medium p-4 w-60'>
+              class='flex justify-center items-center uppercase text-center text-black font-medium p-4 w-60'
+              (click)='featureNotAvailable()'>
         {{'general.footer.more' | translate | uppercase}}
         <img class='w-6 ml-2.5' src='assets/icon/general/down_button.png' alt='more'/>
       </button>
