MOC-57: UI for project, schema and table

--- a/mockez-front/src/app/app.component.html
+++ b/mockez-front/src/app/app.component.html
@@ -6,3 +6,15 @@
     <router-outlet></router-outlet>
   </div>
 </div>
+<div *ngIf='appConfigProviderService.loading' class='loading'>
+  <div class='lds-roller p-0 bg-transparent'>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+</div>
