--- a/mockez-front/src/app/component/table/component/table-properties/table-properties.component.html
+++ b/mockez-front/src/app/component/table/component/table-properties/table-properties.component.html
@@ -1,67 +1,5 @@
-<div id='main' class='mt-28 mx-auto text-sm'>
-  <div class='flex ml-5 justify-center'>
-    <span class='font-medium ml-2.5 w-60'>{{ 'general.table.name' | translate | uppercase }}</span>
-    <span class='font-medium ml-2.5 w-60'>{{ 'general.table.sql_type' | translate | uppercase }}</span>
-    <span class='font-medium ml-2.5 w-60'>{{ 'general.table.generate_type' | translate | uppercase }}</span>
-    <span class='font-medium ml-2.5 w-60'>{{ 'general.table.option' | translate | uppercase }}</span>
-  </div>
-  <div class='mt-4 relative'>
-    <span *ngIf='!dataProvider.table.controls.length'
-          class='flex justify-center'
-          [innerHTML]='"general.table.empty" | translate'>
-    </span>
-    <div *ngFor='let field of dataProvider.table.controls; index as index'>
-      <ng-container [formGroup]='field'>
-        <div class='field flex mt-2.5 justify-center'>
-          <div class='bg-white rounded shadow-light flex items-center ml-2.5 w-60 h-11 py-0 px-5 relative'>
-            <input formControlName='name'
-                   class='outline-border-none' type='text'
-                   [placeholder]='"general.table.name_of_field" | translate'
-            />
-          </div>
-          <div
-            class='justify-between flex bg-white items-center rounded cursor-pointer shadow-light ml-2.5 w-60 h-11 py-0 px-5'
-            (click)='selectTypeOnClick(field.get("sqlType")?.value, index, true)'>
-            <span>{{ field.get('sqlType')?.value.code | truncate: 20 }}</span>
-            <img class='icon' src='assets/icon/general/down_button.png' alt='down button'/>
-          </div>
-          <div
-            class='justify-between flex bg-white items-center rounded cursor-pointer shadow-light ml-2.5 w-60 h-11 py-0 px-5'
-            (click)='selectTypeOnClick(field.get("generateType")?.value, index, false)'>
-            <span>{{ field.get('generateType')?.value.code | truncate: 20 }}</span>
-            <img class='icon' src='assets/icon/general/down_button.png' alt='down button'/>
-          </div>
-          <div class='flex items-center ml-2.5'>
-            <div class='flex items-center'>
-              <span class='font-medium'>{{ 'general.table.blank' | translate | titlecase }}:</span>
-              <div class='rounded bg-white shadow-light flex items-center ml-2.5 h-11 py-0 px-5 w-24'>
-                <input [max]='100'
-                       [min]='0'
-                       [placeholder]='"general.table.blank" | translate | titlecase'
-                       [value]='field.get("option")?.value["blank"]'
-                       class='outline-border-none w-14'
-                       type='number'
-                />
-              </div>
-            </div>
-            <div class='flex justify-center items-center bg-white rounded cursor-pointer ml-2.5 w-11 h-11'>
-              <img class='icon' src='assets/icon/general/sigma.png' alt='sigma'/>
-            </div>
-            <div
-              class='flex justify-center bg-white rounded items-center cursor-pointer shadow-light ml-2.5 w-11 h-11'
-              (click)='dataProvider.removeField(index)'>
-              <img class='icon' src='assets/icon/general/delete.png' alt='delete'/>
-            </div>
-          </div>
-        </div>
-      </ng-container>
-    </div>
-    <div class='flex justify-center'>
-      <button (click)='dataProvider.insertField()'
-              [innerHTML]='"+"'
-              class='bg-blue text-white outline-border-none rounded-full text-2xl font-medium shadow-light w-11 h-11 mt-2.5 ml-2.5 mb-0 mr-0'
-              type='button'>
-      </button>
-    </div>
+<div id='main' class='mx-auto'>
+  <div class='table bg-white w-full'>
+
   </div>
 </div>
