--- a/mockez-front/src/app/shared/layout/component/navigation/navigation.component.html
+++ b/mockez-front/src/app/shared/layout/component/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <div id='main' class='h-screen border-r-2 relative'>
-  <div class='dock cursor-pointer bg-green absolute z-20 -right-4 bg-white drop-shadow w-8 h-8 rounded-full flex justify-center items-center'>
+  <div class='dock cursor-pointer bg-green absolute z-20 -right-4 drop-shadow w-8 h-8 rounded-full flex justify-center items-center'>
     <img class='w-5' src='assets/icon/nav/unexpanded.png' alt='unexpanded'/>
   </div>
   <section class='p-4'>
