--- a/mockez-front/src/app/component/project/component/project/project.component.html
+++ b/mockez-front/src/app/component/project/component/project/project.component.html
@@ -1,25 +1,34 @@
-<div id='main' class='flex justify-between mx-auto mt-20'>
+<div id='main' class='flex justify-between mx-auto'>
   <div class='left bg-white rounded-md p-5 w-2/3'>
     <div class='flex justify-between items-center'>
       <h2 class='font-medium'>Document</h2>
-      <img src='assets/icon/pencil.png' class='w-5 cursor-pointer' alt='pencil' />
+      <img src='assets/icon/pencil.png' class='w-5 cursor-pointer' alt='pencil' (click)='isModifyingDescription=true' />
     </div>
     <hr class='mt-3' />
-    <div class='document text-sm p-1'>
-      {{ project.description }}
+    <div class='document text-sm p-1 leading-6' [formGroup]='formGroup'>
+      <ng-container *ngIf='!isModifyingDescription'>
+        {{ project.description }}
+      </ng-container>
+      <ng-container *ngIf='isModifyingDescription'>
+        <textarea class='w-full h-96 focus:outline-0 border-2 p-3 rounded' formControlName='description'></textarea>
+        <div class='flex justify-end mt-10 -mr-3'>
+          <button (click)='isModifyingDescription=false' type='button' class='bg-gray text-sm text-black rounded font-medium px-5 h-10 py-2 mr-3'>Cancel</button>
+          <button (click)='modifyDescription()' type='button' class='bg-blue text-sm text-white rounded font-medium px-5 h-10 py-2 mr-3'>OK</button>
+        </div>
+      </ng-container>
     </div>
   </div>
   <div class='right bg-white rounded-md p-5'>
     <div class='flex justify-between items-center'>
       <h3 class='font-medium'>About</h3>
       <div class='custom-color flex items-end'>
-        <p class='w-4 h-4 ml-2 rounded-full bg-red'></p>
-        <p class='w-4 h-4 ml-2 rounded-full bg-yellow'></p>
-        <p class='w-4 h-4 ml-2 rounded-full bg-green'></p>
+        <p class='w-3 h-3 ml-2 rounded-full bg-red'></p>
+        <p class='w-3 h-3 ml-2 rounded-full bg-yellow'></p>
+        <p class='w-3 h-3 ml-2 rounded-full bg-green'></p>
       </div>
     </div>
     <p class='mt-5 text-sm font-medium'>{{ project.name | uppercase }}</p>
-    <p class='mt-4 text-justify text-sm'>{{ project.summary }}</p>
+    <p class='mt-4 text-sm'>{{ project.description }}</p>
     <div class='mt-4 text-sm'>
       <p class='font-medium'>Group: {{ project.group.name }}</p>
       <p class='mt-3 text-gray-600'>Contributed by: 100 users</p>
@@ -29,7 +38,8 @@
         <img src='assets/icon/flying_star.png' class='ml-2 w-7 h-7' alt='flying star' />
       </div>
     </div>
-    <button class='mt-4 bg-green text-white rounded text-sm font-medium p-2 w-full' (click)='openSchema(project.id)'>Access Schema</button>
-    <button class='mt-3 bg-red text-white rounded text-sm font-medium p-2 w-full'>Delete Project</button>
+    <button class='mt-4 bg-green text-white rounded text-sm font-medium p-2 w-full' (click)='openSchema()'>Access Schema</button>
+    <button class='mt-3 bg-yellow text-white rounded text-sm font-medium p-2 w-full' (click)='modifyDetail()'>Modify detail</button>
+    <button class='mt-3 bg-red text-white rounded text-sm font-medium p-2 w-full' (click)='delete()'>Delete</button>
   </div>
 </div>
