--- a/mockez-front/src/app/component/project/component/projects/projects.component.html
+++ b/mockez-front/src/app/component/project/component/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div id='main' class='mx-auto my-20'>
+<div id='main' class='mx-auto'>
   <h1 class='title flex font-bold mx-auto'>{{ 'project.title' | translate | uppercase }}</h1>
   <div class='search mt-2 p-4 mx-auto bg-white rounded-md text-sm'>
     <span class='ml-2.5 font-medium'>{{ 'project.search.title' | translate }}</span>
@@ -32,14 +32,13 @@
   <div *ngIf='!projects.length' class='mt-5 text-center text-sm'>{{ credential.get('filter')?.value ? 'No match' : 'project.table.empty' | translate }}</div>
   <div id='cards' class='text-sm'>
     <div *ngFor='let project of projects; index as index'
-         class='card flex bg-white justify-between rounded-md py-5 px-14 mt-5 w-full relative'>
-      <div class='absolute left-7 rounded-md w-1.5 h-28' [style]='setBackgroundColor(index)'></div>
+         class='card flex bg-white justify-between rounded-md py-5 px-14 mt-5 w-full relative hover:drop-shadow-xl'>
+      <div class='absolute left-7 rounded-md w-1.5 h-28' [style]='setLineBackgroundColor(index)'></div>
       <div class='left w-1/2'>
         <p class='font-medium'>
           <a [routerLink]='project?.id' class='cursor-pointer hover:underline'>{{ project?.name | uppercase }}</a>
         </p>
         <p class='mt-3 text-gray-600 text-justify'>{{ project?.description | truncate:200 }}</p>
-        <p class='mt-3 text-gray-600'>Updated 2 days ago</p>
       </div>
       <div class='right flex justify-between w-1/3'>
         <div>
@@ -52,11 +51,12 @@
           </div>
         </div>
         <div class='custom-color flex flex-col items-end ml-5 w-1/5'>
-          <p class='w-4 h-4 mt-3 rounded-full bg-red'></p>
-          <p class='w-4 h-4 mt-3 rounded-full bg-yellow'></p>
-          <p class='w-4 h-4 mt-3 rounded-full bg-green'></p>
+          <p class='w-3 h-3 mt-3 rounded-full bg-red'></p>
+          <p class='w-3 h-3 mt-3 rounded-full bg-yellow'></p>
+          <p class='w-3 h-3 mt-3 rounded-full bg-green'></p>
         </div>
       </div>
+      <p class='mt-3 text-gray-600 absolute bottom-5'>Updated {{ project.modifiedDate! | dateDurationPipe }}</p>
     </div>
   </div>
 </div>
