--- a/mockez-front/src/app/component/schema/component/schemas/schemas.component.html
+++ b/mockez-front/src/app/component/schema/component/schemas/schemas.component.html
@@ -1,83 +1,83 @@
-<div>
-  <h1 class='title flex uppercase font-bold mx-auto mt-20 '>
-    {{ 'project.title' | translate | uppercase }} : {{ project.name }}
-  </h1>
+<div id='main' class='mx-auto'>
+  <h1 class='title flex font-bold mx-auto'>{{ 'schema.title' | translate | uppercase }} : {{ project.name | uppercase }}</h1>
   <div class='search mt-2 p-4 mx-auto bg-white rounded-md text-sm'>
     <span class='ml-2.5 font-medium'>{{ 'schema.search.title' | translate }}</span>
-    <div class='flex ml-5 mt-2'>
-      <div class='flex items-center bg-gray rounded-md ml-5 p-2.5 w-3/5 h-10'>
-        <img src='assets/icon/navigation/search.png' alt='search'/>
+    <div class='flex justify-between mt-2 px-10'>
+      <div class='flex items-center bg-gray rounded-md p-2.5 w-2/3 h-10' [formGroup]='credential'>
+        <img src='assets/icon/navigation/search.png' alt='search' />
         <input class='outline-border-none bg-gray w-full ml-2.5' type='text'
-               placeholder="{{'schema.search.placeholder' | translate}}"/>
+               formControlName='filter'
+               placeholder="{{ 'schema.search.placeholder' | translate }}" />
       </div>
-      <div class='flex items-center rounded-md ml-5 p-2.5 h-10'>
-        <img src='assets/icon/project/filter.png' alt='filter'/>
+      <div class='flex items-center rounded-md p-2.5 h-10'>
+        <img src='assets/icon/project/filter.png' alt='filter' />
       </div>
-      <div class='flex h-10 ml-5'>
+      <div class='flex h-10'>
         <div class='flex justify-center h-10'>
-          <button type='button' class='bg-blue-500 rounded-md text-center text-white font-bold w-40'>
-            {{'schema.search.btn_search' | translate}}
+          <button type='button' class='flex justify-center items-center bg-blue rounded text-white font-medium w-32'>
+            <img src='assets/icon/search.png' class='w-6 mr-2' alt='search' />
+            {{ 'schema.search.btn_search' | translate }}
           </button>
         </div>
-        <div class='flex justify-center h-10'>
-          <button type='button' class='bg-blue-500 rounded-md text-center text-white font-bold ml-5 w-40'
+        <div class='flex justify-center h-10 ml-5'>
+          <button type='button' class='flex justify-center items-center bg-green rounded text-white font-medium w-32'
                   (click)='createSchema()'>
-            {{'schema.search.btn_create_schema' | translate}}
+            <img src='assets/icon/save.png' class='w-6 mr-2' alt='save' />
+            {{ 'schema.search.new' | translate }}
           </button>
         </div>
       </div>
     </div>
   </div>
-  <div id='form' class='mt-2 p-4 mx-auto bg-white rounded-md text-sm'>
-    <div class='flex ml-5 mb-2 justify-center'>
-      <span class='font-medium mt-2 ml-2.5 w-1/5'>{{'schema.table.summary' | translate}}</span>
-      <div class='flex justify-center w-3/5'>
-        <span class='font-medium mt-2 ml-2.5 mr-5'>{{'schema.table.show' | translate}}</span>
-        <div class='justify-between flex bg-white items-center rounded-md cursor-pointer shadow-light w-60'>
-          <span class='ml-3'>{{'schema.table.all_column' | translate}}</span>
-          <img class='mr-3 icon' src='assets/icon/general/down_button.png' alt='down button'/>
+  <div class='flex'>
+    <div class='cards -ml-3 flex flex-wrap content-around {{ isOpenDetail ? "w-3/4" : "" }}'>
+      <div *ngFor='let schema of schemas; index as index'
+           class='m-3 card rounded-md cursor-pointer p-5 w-60 h-80 bg-white relative {{ schemaDetail?.id===schema.id ? "drop-shadow-xl" : "" }} hover:drop-shadow-xl'
+           (click)='openDetail(schema.id!)'>
+        <p class='text-sm rounded-2xl bg-green text-white p-1 w-24 text-center font-medium'>{{ 'complete' | uppercase }}</p>
+        <p class='mt-3 font-medium'>{{ schema.name | titlecase }}</p>
+        <p class='text-sm text-gray-500'>{{ schema.modifiedDate | date }}</p>
+        <p class='mt-5 text-sm'>{{ schema.description | truncate:100 }}</p>
+        <p class='absolute bottom-5 left-5 text-sm'>Table: {{ schema.tables?.length || 0 }}</p>
+        <div class='flex absolute bottom-5 right-5'>
+          <p class='w-3 h-3 rounded-full bg-red'></p>
+          <p class='w-3 h-3 ml-3 rounded-full bg-yellow'></p>
+          <p class='w-3 h-3 ml-3 rounded-full bg-green'></p>
         </div>
       </div>
-      <div class='flex justify-center w-1/5 h-10'>
-        <button type='button' class='bg-gray rounded-md text-center text-black font-medium ml-5 w-40'>
-          {{'schema.table.btn_delete' | translate}}
-        </button>
-      </div>
-      <div class='flex justify-center w-1/5 mt-2'>
-        <a class='font-medium ml-2.5 cursor-pointer'>1</a>
-        <a class='font-medium ml-2.5 cursor-pointer'>2</a>
-        <a class='font-medium ml-2.5 cursor-pointer'>3</a>
-        <a class='font-medium ml-2.5 cursor-pointer'>...</a>
-        <a class='font-medium ml-2.5 cursor-pointer'>10</a>
-      </div>
     </div>
-    <hr>
-    <div class='flex ml-5'>
-      <div class='flex items-center mt-2 w-1/6'>
-        <input type='checkbox' value=''
-               class='w-4 h-4 text-blue-600 bg-gray-100 focus:ring-blue-500 cursor-pointer'>
-      </div>
-      <span class='font-medium mt-2 ml-2.5 w-1/3'>{{'schema.table.name' | translate}}</span>
-      <span class='font-medium mt-2 ml-2.5 w-1/3'>{{'schema.table.shared_with' | translate}}</span>
-      <span class='font-medium mt-2 ml-2.5 w-1/3'>{{'schema.table.last_modified' | translate}}</span>
-      <span class='font-medium mt-2 ml-2.5 w-1/6'></span>
-    </div>
-
-    <div *ngIf='!schemas.length' class='mt-5 text-center'>{{ 'schema.table.empty' | translate }}</div>
-
-    <div *ngFor='let schema of schemas' class='row flex mt-2 justify-between h-8 cursor-pointer' (click)='openDetail(schema.id)'>
-      <div class='flex items-center mt-2 ml-5 w-1/6 cursor-pointer'>
-        <input type='checkbox' value=''
-               class='w-4 h-4 text-blue-600 bg-gray-100 focus:ring-blue-500'>
-      </div>
-      <span class='mt-2 ml-2.5 w-1/3'>{{schema?.name}}</span>
-      <span class='mt-2 ml-2.5 w-1/3'>{{schema?.project?.group?.name}}</span>
-      <span class='mt-2 ml-2.5 w-1/3'>2 days ago</span>
-      <div class='flex justify-center rounded-md items-center cursor-pointer ml-2.5 w-1/6'>
-        <img class='icon' src='assets/icon/general/delete.png' alt='delete'/>
+    <div *ngIf='isOpenDetail' class='detail my-5 w-1/4'>
+      <div class='bg-white p-5 text-sm rounded-md drop-shadow-xl'>
+        <div class='dock cursor-pointer absolute rotate-180 z-20 -left-5 bg-blue drop-shadow w-8 h-8 rounded-full flex justify-center items-center'
+             (click)='isOpenDetail=false'>
+          <img class='w-5' src='assets/icon/nav/unexpanded.png' alt='unexpanded'/>
+        </div>
+        <div class='flex justify-between'>
+          <p class='text-lg font-medium'>{{ 'Detail Schema' | uppercase }}</p>
+          <div class='flex'>
+            <p class='w-3 h-3 rounded-full bg-red'></p>
+            <p class='w-3 h-3 ml-3 rounded-full bg-yellow'></p>
+            <p class='w-3 h-3 ml-3 rounded-full bg-green'></p>
+          </div>
+        </div>
+        <p class='mt-5'>Schema name: <b>{{ schemaDetail.name | uppercase }}</b></p>
+        <p class='mt-3 leading-6'>{{ schemaDetail.description }}</p>
+        <div class='flex mt-8 items-center'>
+          Status:
+          <p class='rounded-2xl ml-3 bg-green text-white p-1 w-24 text-center font-medium'>{{ 'complete' | uppercase }}</p>
+        </div>
+        <p class='mt-3'>Table: 10</p>
+        <div class='mt-3 rounded-md bg-gray max-h-40 p-5 flex flex-wrap overflow-y-scroll'>
+          <p class='bg-blue font-medium p-2 mx-2 my-2 rounded-md text-white'>User</p>
+          <p class='bg-blue font-medium p-2 mx-2 my-2 rounded-md text-white'>Product</p>
+          <p class='bg-blue font-medium p-2 mx-2 my-2 rounded-md text-white'>Checkout</p>
+          <p class='bg-blue font-medium p-2 mx-2 my-2 rounded-md text-white'>Receipt</p>
+          <p class='bg-blue font-medium p-2 mx-2 my-2 rounded-md text-white'>Customer</p>
+        </div>
+        <button class='mt-4 bg-green text-white rounded text-sm font-medium p-2 w-full' (click)='openTable()'>Access Table</button>
+        <button class='mt-3 bg-yellow text-white rounded text-sm font-medium p-2 w-full' (click)='modifySchema()'>Modify detail</button>
+        <button class='mt-3 bg-red text-white rounded text-sm font-medium p-2 w-full' (click)='deleteSchema()'>Delete</button>
       </div>
     </div>
   </div>
 </div>
-
-
