--- a/mockez-front/src/app/shared/layout/component/navigation/navigation.component.html
+++ b/mockez-front/src/app/shared/layout/component/navigation/navigation.component.html
@@ -12,10 +12,10 @@
       <img class='w-10' src='assets/icon/navigation/panda.png' alt='panda'/>
       <span class='font-bold ml-3'>MOCKEZ</span>
     </div>
-    <div class='flex mt-5 pl-4 py-2 bg-gray rounded-md'>
-      <img class='icon' src='assets/icon/nav/search.png' alt='search'/>
-      <input class='text-sm ml-5 bg-transparent' type='text' placeholder='Find...'/>
-    </div>
+<!--    <div class='flex mt-5 pl-4 py-2 bg-gray rounded-md'>-->
+<!--      <img class='icon' src='assets/icon/nav/search.png' alt='search'/>-->
+<!--      <input class='text-sm ml-5 bg-transparent' type='text' placeholder='Find...'/>-->
+<!--    </div>-->
   </section>
   <hr class='mt-3'/>
   <section class='text-sm font-medium mt-5 pr-6'>
