--- a/mockez-front/src/app/component/project/component/project/project.component.html
+++ b/mockez-front/src/app/component/project/component/project/project.component.html
@@ -1,4 +1,4 @@
-<div id='main' class='flex justify-between mx-auto'>
+<div id='main' class='flex justify-evenly mx-auto'>
   <div class='left bg-white rounded-md p-5 w-2/3'>
     <div class='flex justify-between items-center'>
       <h2 class='font-medium'>Document</h2>
@@ -7,7 +7,7 @@
     <hr class='mt-3' />
     <div class='document text-sm p-1 leading-6' [formGroup]='formGroup'>
       <ng-container *ngIf='!isModifyingDescription'>
-        {{ project.description }}
+        <markdown [data]='project.description'></markdown>
       </ng-container>
       <ng-container *ngIf='isModifyingDescription'>
         <textarea class='w-full h-96 focus:outline-0 border-2 p-3 rounded' formControlName='description'></textarea>
@@ -28,7 +28,7 @@
       </div>
     </div>
     <p class='mt-5 text-sm font-medium'>{{ project.name | uppercase }}</p>
-    <p class='mt-4 text-sm'>{{ project.description }}</p>
+    <p class='mt-4 text-sm'>{{ project.summary }}</p>
     <div class='mt-4 text-sm'>
       <p class='font-medium'>Group: {{ project.group.name }}</p>
       <p class='mt-3 text-gray-600'>Contributed by: 100 users</p>
