--- a/mockez-front/src/app/component/project/component/projects/projects.component.html
+++ b/mockez-front/src/app/component/project/component/projects/projects.component.html
@@ -1,44 +1,17 @@
 <div id='main' class='mx-auto'>
-  <h1 class='title flex font-bold mx-auto'>{{ 'project.title' | translate | uppercase }}</h1>
-  <div class='search mt-2 p-4 mx-auto bg-white rounded-md text-sm'>
-    <span class='ml-2.5 font-medium'>{{ 'project.search.title' | translate }}</span>
-    <div class='flex justify-between mt-2 px-10'>
-      <div class='flex items-center bg-gray rounded-md p-2.5 w-2/3 h-10' [formGroup]='credential'>
-        <img src='assets/icon/navigation/search.png' alt='search' />
-        <input class='outline-border-none bg-gray w-full ml-2.5' type='text'
-               formControlName='filter'
-               placeholder="{{ 'project.search.placeholder' | translate }}" />
-      </div>
-      <div class='flex items-center rounded-md p-2.5 h-10'>
-        <img src='assets/icon/project/filter.png' alt='filter' />
-      </div>
-      <div class='flex h-10'>
-        <div class='flex justify-center h-10'>
-          <button type='button' class='flex justify-center items-center bg-blue rounded text-white font-medium w-32'>
-            <img src='assets/icon/search.png' class='w-6 mr-2' alt='search' />
-            {{ 'project.search.btn_search' | translate }}
-          </button>
-        </div>
-        <div class='flex justify-center h-10 ml-5'>
-          <button type='button' class='flex justify-center items-center bg-green rounded text-white font-medium w-32'
-                  (click)='createProject()'>
-            <img src='assets/icon/save.png' class='w-6 mr-2' alt='save' />
-            {{ 'project.search.new' | translate }}
-          </button>
-        </div>
-      </div>
-    </div>
+  <div class='search text-center' [formGroup]='credential'>
+    <input class='text-sm w-1/2 py-2 px-5 rounded-md' formControlName='filter' type='text' placeholder='Find anything...' />
   </div>
   <div *ngIf='!projects.length' class='mt-5 text-center text-sm'>{{ credential.get('filter')?.value ? 'No match' : 'project.table.empty' | translate }}</div>
-  <div id='cards' class='text-sm'>
+  <div class='text-sm'>
     <div *ngFor='let project of projects; index as index'
-         class='card flex bg-white justify-between rounded-md py-5 px-14 mt-5 w-full relative hover:drop-shadow-xl'>
+         class='flex bg-white justify-between rounded-md py-5 px-14 mt-5 w-full relative hover:drop-shadow-xl'>
       <div class='absolute left-7 rounded-md w-1.5 h-28' [style]='setLineBackgroundColor(index)'></div>
       <div class='left w-1/2'>
         <p class='font-medium'>
           <a [routerLink]='project?.id' class='cursor-pointer hover:underline'>{{ project?.name | uppercase }}</a>
         </p>
-        <p class='mt-3 text-gray-600 text-justify'>{{ project?.description | truncate:200 }}</p>
+        <p class='mt-3 text-gray-600 text-justify'>{{ project?.summary | truncate:200 }}</p>
       </div>
       <div class='right flex justify-between w-1/3'>
         <div>
@@ -59,4 +32,9 @@
       <p class='mt-3 text-gray-600 absolute bottom-5'>Updated {{ project.modifiedDate! | dateDurationPipe }}</p>
     </div>
   </div>
+  <button
+    class='absolute bottom-10 right-5 bg-green rounded-full w-12 h-12 drop-shadow-xl font-bold text-white search-button'
+    (click)='create()'>
+    +
+  </button>
 </div>
